@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-22
+2014-03-26 David
+- fix bug L3T::Data, treat all Event level Pds::Src as equal.
+	
 Tag: V00-00-21
 2014-03-25 David
 - fix bug with what calibstore data to associate with cspad2x2
